# Faraday

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/faraday_api/: __init__.py  deps.py  main.py
apps/api/src/faraday_api/routes/: __init__.py  ask.py  health.py
apps/api/src/faraday_api/schemas/: __init__.py  ask.py
apps/web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js
apps/web/public/icons/: README.md
apps/web/public/illustrations/: README.md
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/ask/: AskResultView.tsx  LoadingSkeleton.tsx  PastRunsWidget.tsx  QueryInput.tsx  SuggestedQueries.tsx  SummaryCards.tsx  WatchTeaser.tsx  index.ts
apps/web/src/components/chart/: BarChart.tsx  ChartRenderer.tsx  HeatmapChart.tsx  HistogramChart.tsx  ListView.tsx  ScatterChart.tsx  TimeseriesChart.tsx  index.ts  theme.ts
apps/web/src/components/illustrations/: BotanicalCorner.tsx  index.ts
apps/web/src/components/landing/: LiveAskPreview.tsx
apps/web/src/components/shell/: AppShell.tsx  Logo.tsx  RightRail.tsx  Sidebar.tsx  TopBar.tsx  WatercolorPanel.tsx  WatercolorWash.tsx  Wordmark.tsx  icons.tsx  index.ts
apps/web/src/design/: theme.ts
apps/web/src/lib/: api.ts  format.ts
apps/web/src/pages/: AskMode.tsx  ChartsDemo.tsx  ComingSoon.tsx  Landing.tsx
apps/web/src/types/: analysis.ts
apps/worker/: pyproject.toml
apps/worker/src/faraday_worker/: __init__.py  celery_app.py
apps/worker/src/faraday_worker/tasks/: __init__.py  embedding_tasks.py  hello_tasks.py
docs/: spec.md
engine/: pyproject.toml
engine/src/faraday_engine/: __init__.py
engine/src/faraday_engine/domain/: __init__.py  analysis_result.py  experiment.py  query_spec.py
engine/src/faraday_engine/factories/: __init__.py  provider_factory.py  service_factory.py
engine/src/faraday_engine/providers/: __init__.py
engine/src/faraday_engine/providers/llm/: __init__.py  base.py  claude_provider.py  ollama_provider.py
engine/src/faraday_engine/providers/vector/: __init__.py  base.py  faiss_provider.py
engine/src/faraday_engine/repositories/: __init__.py  base.py  experiment_repository.py  filter_spec.py  models.py  session.py
engine/src/faraday_engine/seed/: __init__.py  amide_coupling_seeder.py  base.py  buchwald_seeder.py  building_blocks.py  distributions.py  fit_rules.py  reagent_library.py  reduction_seeder.py  reductive_amination_seeder.py  suzuki_seeder.py
engine/src/faraday_engine/services/: __init__.py  analyze_service.py  embedding_service.py  experiment_service.py  query_parser_service.py
engine/src/faraday_engine/services/analyze/: __init__.py  bar_analyzer.py  base.py  dataframe.py  heatmap_analyzer.py  histogram_analyzer.py  list_analyzer.py  scatter_analyzer.py  summary.py  timeseries_analyzer.py
infra/: docker-compose.yml  secrets.md
infra/hf-spaces/: Dockerfile  README.md  supervisord.conf
infra/vercel/: README.md
scripts/: embed.py  hf-deploy.sh  parse_query.py  seed.py
shared/: pyproject.toml
shared/src/faraday_shared/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/engine/services/: test_query_parser_service.py
tests/engine/services/analyze/: conftest.py  test_bar_analyzer.py  test_dataframe.py  test_histogram_analyzer.py  test_summary.py
tests/fakes/: fake_llm.py
tests/integration/: test_query_parser_llm.py
tests/integration/engine/services/: test_query_parser_service.py
tests/integration/faraday_api/routes/: test_ask.py
tests/unit/: test_analyze_service.py  test_query_parser.py
tests/unit/engine/services/analyze/: test_list_analyzer.py  test_scatter_analyzer.py  test_timeseries_analyzer.py
tests/unit/faraday_api/routes/: test_ask.py
tests/unit/faraday_engine/domain/: test_query_spec.py
tests/unit/faraday_engine/services/: test_analyze_service.py
(+2 files in other folders)
