[project]
name = "faraday"
version = "0.1.0"
description = "AI-assisted lab notebook for industry chemists"
requires-python = ">=3.11"
dependencies = [
    "faraday-shared",
    "faraday-engine",
    "faraday-api",
    "faraday-worker",
]

[tool.uv.workspace]
members = ["shared", "engine", "apps/api", "apps/worker"]

[tool.uv.sources]
faraday-shared = { workspace = true }
faraday-engine = { workspace = true }
faraday-api = { workspace = true }
faraday-worker = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
