[project]
name = "faraday-engine"
version = "0.1.0"
description = "Faraday business layer — services, domain, providers, factories"
requires-python = ">=3.11"
dependencies = [
    "faraday-shared",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "instructor>=1.4.0",
    "ollama>=0.3.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faraday_engine"]
