[project]
name = "faraday-shared"
version = "0.1.0"
description = "Faraday cross-cutting: config + logging"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "celery>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faraday_shared"]
