[project]
name = "faraday-api"
version = "0.1.0"
description = "Faraday HTTP API — FastAPI"
requires-python = ">=3.11"
dependencies = [
    "faraday-shared",
    "faraday-engine",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "celery>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faraday_api"]
