[project]
name = "faraday-worker"
version = "0.1.0"
description = "Faraday Celery worker"
requires-python = ">=3.11"
dependencies = [
    "faraday-shared",
    "faraday-engine",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "flower>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faraday_worker"]
